package vitalkrilov.itmo.prog.lab3.items;

public interface Droppable {

    // Kinda callback that it'd been dropped. Honestly, Droppable is just custom "type" for this project: nothing more is not needed but.....
    void makeDropped();

}
