package vitalkrilov.itmo.prog.lab3.items;

public interface InAirSpinnable {

    void spinInAirAround();

}
