package vitalkrilov.itmo.prog.lab3.items;

public interface Sendable {

    // Kinda callback that it'd been dropped. Honestly, Sendable is just custom "type" for this project: nothing more is not needed but.....
    void makeSent();

}
