package vitalkrilov.itmo.prog.lab3.world;

public interface Movable {

    Location getCurrentLocation();

    void setCurrentLocation(Location loc);

}
